syntax = "proto3";

package Inventory;

option java_multiple_files = true;
option java_outer_classname = "UtilProto";
option java_package = "com.chocolatada.inventory.grpc";

message Item {
  int64 inventory_item_id = 1;
  string name = 2;
  string description = 3;
  int64 gold = 4;
  int64 required_level = 5;
  ItemType type = 6;
  SlotType slot = 7;
  int64 hp_bonus = 8;
  int64 atk_bonus = 9;
  int64 def_bonus = 10;
  int64 stamina_bonus = 11;
  int64 accuracy_bonus = 12;
  int64 evasion_bonus = 13;
  float crit_rate_bonus = 14;
  float crit_damage_bonus = 15;
  bool equipped = 16;
}

enum ItemType {
  ITEM_TYPE_UNSPECIFIED = 0;
  WEAPON = 1;
  ARMOR = 2;
}

enum SlotType {
  SLOT_TYPE_UNSPECIFIED = 0;
  HEAD = 1;
  CHEST = 2;
  LEGS = 3;
  FEET = 4;
  HANDS = 5;
  MAIN_HAND = 6;
  OFF_HAND = 7;
  RING = 8;
  NECKLACE = 9;
}
